# minerva

./: .dockerignore  .env.example  .envrc  .gitignore  .migrations-immutable-baseline  .pre-commit-config.yaml  AGENTS.md  CLA.md  CLAUDE.md  README.md  docker-compose.microservices.yml  docker-compose.moodle.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json
backend/: Cargo.toml
backend/.sqlx/: query-006e897a161e083959fef02cab820ca80d9405ea8775f7c9a25a453fecd297cd.json  query-009bc692ccc6fa394a00f1101c97a44337cc12d1cf1c81db387f13e4204c4632.json  query-01068315c8caea33969f8cbb06575a13a138f6d485811ac01a1e69777b64d5fd.json  query-01f8c86f74075d165b519898802a6ddce845689a59ec1986ec070ab81384c2bb.json  query-01f9b74e514953908e4c5bc056ed9c1ad218b64cd7f36945731ab86cdf1704d1.json  query-024ef5e9cd5b09232b01b3a739d21a98c9ed61dec95511b1ad52d2efdfda4b5a.json  query-02986ed17c1a54f7a9015453c73a1602e58d07dfa168237847350b121ddc2a3d.json  query-02d962220d4232afcb983b1dd78d5a9ec8b321ef2d45802535770aad391d3af1.json  query-033874678019cfa4927f561879201f3a42387d3d56b5e862275aeb63db8806fb.json  query-036ca0b503bd5525f2949b26e99eeaa6b0225450d0a396286cbfa449b6f70ce6.json  query-037f86456d4f7f040f594264404d34398b7b402a0a4b67e67556e155c0086a6b.json  query-04c4bf52f99c8447173944b4c93b4e4aa708bc3d00b39d7a9d5e106b5e96e9e6.json  query-05275365dd19d3cee5febb0c9ce6f1ff1111aae4fc045f44f4affd0e4c906a8d.json  query-05b7e8271aa231e5fcb47e3018765ab109b887fb6d26048e4d8eb715a086bfa7.json  query-065b8df3df552beb39894caa89949b2d8b11a1d29fd7e9bbd79033ccb69e6591.json  query-06ded7fae1b45def7f70784ad5def8c20af8df70cf5ba3fd0187351f3808e285.json  query-07dd1a3f4ebeefbf114c9196daf84d2aaefd2d1cae631e01666430cf4104196c.json  query-081a2017163fdc0df037a64f482e6b3de2d609769bb9c0f581407b147b61dcba.json  query-081ad41998511a9cef2002c09c00bf3e7489136de9e8d7d0f7c4d3fca0fc5da4.json  query-0829eaf4195e3a172ea8cd2dcfd9af9b668887c97e44f96cd71cf34f53917e22.json  query-08e755b1cb42d20d68e85eca3029a6c4732e87e4f51b3a8b99b87c1ae5b42f5c.json  query-0918eb511b116b238951e0c3961e4a7f283e19fbac041e76112ad834330a124e.json  query-0931727217f0e58a50fb0e897a0b173a8a3a05edfc47063e8db6c035e0ae0267.json  query-09b4734312def22d8700b9afb8188378fd96b05845a5b2965918583052686b6d.json  query-09dc321d78ac2e763169f0f6ac0ed42152e8312d0efe1a42c7b983a11c50d11f.json  query-09e6be87df8e7a647e6e1c97dddbf2178a0d051b964525147152e6b9601ccdae.json  query-0a00cbce9f571037edfe6fbee27ae628957becaecf812de7d43830dc8814736f.json  query-0b8d1ddfd0a1ff3e1796f43835bcf70c170cdb3a891191e4beaad5c2095d7da9.json  query-0ba15168ee2791f2ef660588779154d4453fde6b802146b85cd1005dcbab8272.json  query-0c1baf01309bd61d8d5f1c7352dee94f26eb2caae7365bf559a6ad90149624d9.json  query-0c3134d4ab252571c0f6bb99584723400abde9d0eeb9a1d6df848fddca6ec299.json  query-0d06383160d41bd405aba44b11bed140fb14cab84c43bb45029141a0d993db72.json  query-0d483ee3636678064de0872a65fe89feb2425d9cde748fae3a59941353961868.json  query-0d77f671db6f9bb6de732157ae960aec547285e4cbb76cb6986a191434caa49b.json  query-0d8a51db01e1f8631add51c62475ab35536f1634fe00bc47ddf08af258f2566d.json  query-0d8e4081f5f12bd784b90c6210f507bbb2e854d5a99a63c94d13f0084c682343.json  query-0d9f29cef437c5817602eae992c7abfcd506e579f39bb7cdfa778d2a891b4e14.json  query-0dbfa99a558df085e193ff39033a3d9ee8448bf2f1a6306c7ff5c4a828fe87df.json  query-0dc32e6478159ce026ea565a4146599e4b669a3d8967eab447a9d14a67e005ef.json  query-0deff8fd626369de87a99d867453b601e36412a2298c41eb9e27153d6251c4a6.json  (+601 more)
backend/crates/minerva-app-core/: Cargo.toml
backend/crates/minerva-app-core/src/: canvas.rs  config.rs  error.rs  feature_flags.rs  lib.rs  llm.rs  lti.rs  lti_nrps.rs  memprobe.rs  model_capabilities.rs  relink_scheduler.rs  schedulers.rs  state.rs  (+2 more)
backend/crates/minerva-catalog/: Cargo.toml
backend/crates/minerva-core/: Cargo.toml
backend/crates/minerva-db/: Cargo.toml
backend/crates/minerva-embed-engine/: Cargo.toml
backend/crates/minerva-embedder/: Cargo.toml
backend/crates/minerva-eureka/: Cargo.toml
backend/crates/minerva-ingest/: Cargo.toml
backend/crates/minerva-mbz/: Cargo.toml
backend/crates/minerva-metrics/: Cargo.toml
backend/crates/minerva-pipeline/: Cargo.toml
backend/crates/minerva-reranker/: Cargo.toml
backend/crates/minerva-rpc/: Cargo.toml  build.rs
backend/crates/minerva-rpc-local/: Cargo.toml
backend/crates/minerva-scheduler/: Cargo.toml
backend/crates/minerva-server/: Cargo.toml
backend/crates/minerva-worker/: Cargo.toml
backend/migrations/: 20260324000001_initial.sql  20260324000002_add_strategy.sql  20260324000003_pinned_and_teacher_notes.sql  20260325000001_usage_limits_and_suspension.sql  20260325000002_document_displayable.sql  20260330000001_api_keys.sql  20260330000002_course_embedding_provider.sql  20260330000003_document_queue_index.sql  20260331000001_lti_tables.sql  20260331000002_canvas_connections.sql  20260401000001_default_local_embedding.sql  20260401000002_default_inference_model.sql  20260410000001_reclassify_url_documents.sql  20260412000001_play_designations.sql  20260412000002_play_course_catalog.sql  20260412000003_processing_started_at.sql  20260413000001_document_source_url.sql  20260413000002_message_feedback.sql  20260413000003_course_min_score.sql  20260413000004_external_auth_invites.sql  20260414000001_lowercase_eppn.sql  20260415000001_role_rules_and_spend_caps.sql  20260415000002_canvas_connections.sql  20260415000003_canvas_sync_log_updated_at.sql  20260415000004_course_member_role_suggestions.sql  20260415000005_user_privacy_ack.sql  20260415000006_message_generation_stats.sql  20260422000001_lti_site_level.sql  20260422000002_site_integration_keys.sql  20260422000003_site_key_eppn_domains.sql  20260422000004_lti_platform_eppn_domains.sql  20260425000001_document_kind.sql  20260425000002_document_relations.sql  20260425000003_document_pooled_embedding.sql  20260426000001_kg_followups.sql  20260426000002_more_kinds.sql  20260426000003_feature_flags.sql  20260426000004_more_relations.sql  20260426000005_courses_last_linked_at.sql  20260426000005_linker_decisions.sql  (+55 more)
(+451 files in other folders)
