[workspace]
members = [
    "crates/minerva-server",
    "crates/minerva-core",
    "crates/minerva-ingest",
    "crates/minerva-db",
]
resolver = "2"

[workspace.dependencies]
# Web
axum = { version = "0.8", features = ["multipart", "macros"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "limit"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "chrono", "uuid"] }

# Vector DB
qdrant-client = "1"
fastembed = "5"

# LLM / Embeddings (HTTP)
reqwest = { version = "0.13", features = ["json", "stream"] }
futures = "0.3"

# Auth / Crypto
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
rand = "0.10"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rsa = "0.9"
rand_chacha = "0.3"
urlencoding = "2"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
dotenvy = "0.15"
