[workspace]
members = [
    "crates/minerva-server",
    "crates/minerva-core",
    "crates/minerva-ingest",
    "crates/minerva-db",
    "crates/minerva-eureka",
]
# `vendor/eureka-2` is a release-artifact tarball, not a Minerva-owned crate;
# the path dep from `minerva-eureka` resolves it but we exclude it from the
# workspace so its lints / lockfile / version don't bleed in.
exclude = ["vendor/eureka-2"]
resolver = "2"

[workspace.dependencies]
# Web
axum = { version = "0.8", features = ["multipart", "macros"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "limit"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "chrono", "uuid"] }

# Vector DB
qdrant-client = "1"
# `qwen3` feature pulls in candle-core/candle-nn so we can run
# Qwen/Qwen3-Embedding-0.6B alongside the ONNX-backed fastembed models.
# That model isn't part of `EmbeddingModel`; it goes through fastembed's
# separate `Qwen3TextEmbedding` API. See
# `crates/minerva-ingest/src/fastembed_embedder.rs`.
fastembed = { version = "5", features = ["qwen3"] }
candle-core = "0.9"
# Direct hf-hub dep so the custom-ONNX loader (e.g. snowflake-arctic-embed-m-v2.0
# via fastembed's `UserDefinedEmbeddingModel` API) can fetch model files from
# the Hub. Pinned to the same major as fastembed's transitive copy so cargo
# doesn't compile two versions side-by-side.
hf-hub = "0.4"

# LLM / Embeddings (HTTP)
reqwest = { version = "0.13", features = ["json", "stream"] }
futures = "0.3"

# Auth / Crypto
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
rand = "0.10"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rsa = "0.9"
rand_chacha = "0.3"
urlencoding = "2"

# Utilities
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
dotenvy = "0.15"

# Archive and XML parsing (Moodle .mbz import)
tar = "0.4"
flate2 = "1"
quick-xml = { version = "0.37", features = ["serialize"] }
tempfile = "3"
