[package]
name = "minerva-embedder"
version = "0.1.0"
edition = "2021"

# Standalone gRPC server that owns the FastEmbedder model cache. Talks
# the proto defined in `minerva-rpc::proto::embedder`; the api / worker
# call into it via `RemoteEmbedderClient`. See
# `docs/ARCHITECTURE.md` for the full design.

[[bin]]
name = "minerva-embedder"
path = "src/main.rs"

[dependencies]
minerva-core = { path = "../minerva-core" }
minerva-catalog = { path = "../minerva-catalog" }
minerva-embed-engine = { path = "../minerva-embed-engine" }
minerva-rpc = { path = "../minerva-rpc" }

async-trait = "0.1"
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow = "1"
dotenvy.workspace = true
