[package]
name = "minerva-eureka"
version = "0.1.0"
edition = "2021"
description = "Minerva-side integration of the eureka-2 concept knowledge graph crate."

[dependencies]
# Path dep on the vendored eureka-2 release tarball. The directory is
# populated by `scripts/fetch-eureka.sh`, pinned via `.eureka-version` at
# the repo root, and ignored from version control. Both CI workflows and
# local dev shells must run that script before any cargo invocation.
eureka-2 = { path = "../../vendor/eureka-2" }

# Carry over the workspace's stack so the integration layer can wire the
# pool from `minerva-db` and surface routes consistent with the rest of
# `minerva-server`. Only what the stub touches today is listed; expand as
# we land real routes.
minerva-core = { path = "../minerva-core" }
minerva-db = { path = "../minerva-db" }

sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
async-trait = "0.1"
