[package]
name = "minerva-ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
minerva-db = { path = "../minerva-db" }

reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
futures.workspace = true
sqlx.workspace = true
qdrant-client.workspace = true
fastembed.workspace = true
candle-core.workspace = true
pdf-extract = "0.10"
scraper = "0.22"

tar.workspace = true
flate2.workspace = true
quick-xml.workspace = true
tempfile.workspace = true

async-trait = "0.1"
