[package]
name = "minerva-ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
minerva-core = { path = "../minerva-core" }
minerva-db = { path = "../minerva-db" }

reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
futures.workspace = true
sqlx.workspace = true
qdrant-client.workspace = true
fastembed.workspace = true
candle-core.workspace = true
hf-hub.workspace = true
pdf-extract = "0.10"
scraper = "0.27"

tar.workspace = true
flate2.workspace = true
quick-xml.workspace = true
tempfile.workspace = true

async-trait = "0.1"

# `malloc_trim(0)` after FastEmbedder LRU eviction. glibc holds freed
# pages well past Drop, so `wait_for_rss_drop` was observing 0 bytes
# released even after the dispatcher Arc dropped, then the next model
# load allocated on top of the lingering arenas and OOM-killed the
# embedder pod. AGENTS.md's "Sync eviction" section flagged this as
# the follow-up.
[target.'cfg(target_env = "gnu")'.dependencies]
libc = "0.2"
