[package]
name = "minerva-pipeline"
version = "0.1.0"
edition = "2021"

[dependencies]
minerva-core = { path = "../minerva-core" }
minerva-catalog = { path = "../minerva-catalog" }
minerva-db = { path = "../minerva-db" }

reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
futures.workspace = true
sqlx.workspace = true
qdrant-client.workspace = true
# Content-hash dedup key (`compute_content_hash`), shared with the api
# upload routes and the Canvas sync engine.
sha2.workspace = true
hex.workspace = true
pdf-extract = "0.12"
scraper = "0.27"

async-trait = "0.1"
