[package]
name = "minerva-scheduler"
version = "0.1.0"
edition = "2021"

# Standalone periodic-scheduler binary: Canvas auto-sync, LTI NRPS
# reconcile, LTI platform-health probe, and pending-platform cleanup.
# Depends only on the axum-free `minerva-app-core` (AppState + the
# Canvas sync engine + the NRPS client + the scheduler loops), so this
# image compiles no axum, no route tree, and no MBZ parser. It writes
# Canvas-downloaded files to the shared docs volume and reaches the
# embedder over gRPC only transitively (it doesn't embed); the periodic
# loops are pure DB queries + outbound HTTP. Mirrors `minerva-worker`.

[[bin]]
name = "minerva-scheduler"
path = "src/main.rs"

[dependencies]
minerva-app-core = { path = "../minerva-app-core" }
minerva-metrics = { path = "../minerva-metrics" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow = "1"
