[package]
name = "minerva-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "minerva"
path = "src/main.rs"

[dependencies]
minerva-core = { path = "../minerva-core" }
minerva-db = { path = "../minerva-db" }
minerva-ingest = { path = "../minerva-ingest" }

axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
futures.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
sqlx.workspace = true
qdrant-client.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
jsonwebtoken.workspace = true
regex.workspace = true
rsa.workspace = true
rand_chacha.workspace = true
urlencoding.workspace = true
tokio-stream = "0.1"
base64 = "0.22"
anyhow = "1"
tempfile.workspace = true
async-trait = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Spins up a real HTTP server in-process so strategy tests can exercise the
# full FLARE state machine (streaming SSE, retrieval-triggered restarts,
# repeat detection, token caps) against a scripted Cerebras response.
wiremock = "0.6"
