[package]
name = "minerva-server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "minerva"
path = "src/main.rs"

# Phase 3 of the microservices split: standalone doc-claim worker
# binary that shares the api crate's module tree (so it can call into
# classification, relink scheduler, routes::canvas::run_sync, etc.
# without a separate crate). Selected via TARGET_BIN in
# `docker/Dockerfile.prod`.
[[bin]]
name = "minerva-worker"
path = "src/bin/minerva-worker.rs"

# Phase 3.5: standalone scheduler binary for the periodic Canvas /
# LTI NRPS / platform-health / pending-platform-cleanup loops.
# Same module tree access as the worker for the same reason.
[[bin]]
name = "minerva-scheduler"
path = "src/bin/minerva-scheduler.rs"

[features]
default = []
# Single-process local-dev build: links the in-process model engine so
# the one `minerva` binary can embed/rerank without separate
# embedder/reranker pods. Off in prod images (they reach the model
# servers over gRPC). The dev Dockerfile builds with
# `--features local-engine`.
local-engine = ["dep:minerva-embed-engine", "dep:minerva-rpc-local"]

[dependencies]
minerva-core = { path = "../minerva-core" }
minerva-catalog = { path = "../minerva-catalog" }
minerva-db = { path = "../minerva-db" }
minerva-pipeline = { path = "../minerva-pipeline" }
# Model engine + in-process client wrappers. Optional: only the
# `local-engine` feature (single-process local dev) pulls them in, so
# the prod api binary, which reaches the embedder/reranker pods over
# gRPC, never compiles fastembed/candle/hf-hub.
minerva-embed-engine = { path = "../minerva-embed-engine", optional = true }
# Moodle .mbz importer (api-only; the import-mbz route).
minerva-mbz = { path = "../minerva-mbz" }
# Remote gRPC client wrappers for the embedder + reranker services
# (engine-free). The in-process Local* wrappers come from
# minerva-rpc-local, gated behind the `local-engine` feature so prod
# api/worker/scheduler images don't link the model engine.
minerva-rpc = { path = "../minerva-rpc" }
minerva-rpc-local = { path = "../minerva-rpc-local", optional = true }
# Concept-graph integration via the eureka HTTP service has been
# removed pending a clean HTTP-wrapper rewrite. Previously a path-dep
# on a vendored `eureka-2` Rust release artifact, which forced
# `vendor/eureka-2` to exist on disk for every build. The runtime
# `courses.concept_graph_enabled` flag stays (it's surfaced to the
# frontend's feature-flags shape) but currently has no consumer
# beyond the API response field.

axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
futures.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
sqlx.workspace = true
qdrant-client.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
jsonwebtoken.workspace = true
regex.workspace = true
rsa.workspace = true
rand_chacha.workspace = true
urlencoding.workspace = true
tokio-stream = "0.1"
base64 = "0.22"
anyhow = "1"
tempfile.workspace = true
async-trait = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Spins up a real HTTP server in-process so strategy tests can exercise the
# full FLARE state machine (streaming SSE, retrieval-triggered restarts,
# repeat detection, token caps) against a scripted Cerebras response.
wiremock = "0.6"
