[package]
name = "minerva-server"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "minerva"
path = "src/main.rs"

# The doc-claim worker (`minerva-worker`) and the periodic scheduler
# (`minerva-scheduler`) are now their own crates, built on the axum-free
# `minerva-app-core`, so their images link no axum / routes / MBZ parser.

[features]
default = []
# Single-process local-dev build: links the in-process model engine so
# the one `minerva` binary can embed/rerank without separate
# embedder/reranker pods. Off in prod images (they reach the model
# servers over gRPC). The dev Dockerfile builds with
# `--features local-engine`.
local-engine = ["minerva-app-core/local-engine"]

[dependencies]
minerva-core = { path = "../minerva-core" }
minerva-catalog = { path = "../minerva-catalog" }
# `axum` feature: turns on app-core's `IntoResponse for AppError` impl so
# route handlers can return `Result<_, AppError>`. The worker / scheduler
# binaries depend on app-core WITHOUT this feature, so they link no axum.
minerva-app-core = { path = "../minerva-app-core", features = ["axum"] }
minerva-db = { path = "../minerva-db" }
minerva-pipeline = { path = "../minerva-pipeline" }
# Moodle .mbz importer (api-only; the import-mbz route).
minerva-mbz = { path = "../minerva-mbz" }
# Remote gRPC client wrappers for the embedder + reranker services
# (engine-free). The in-process engine fallback lives in app-core
# behind its `local-engine` feature, which this crate's `local-engine`
# enables; the prod api never links the model engine.
minerva-rpc = { path = "../minerva-rpc" }
# Concept-graph integration via the eureka HTTP service has been
# removed pending a clean HTTP-wrapper rewrite. Previously a path-dep
# on a vendored `eureka-2` Rust release artifact, which forced
# `vendor/eureka-2` to exist on disk for every build. The runtime
# `courses.concept_graph_enabled` flag stays (it's surfaced to the
# frontend's feature-flags shape) but currently has no consumer
# beyond the API response field.

axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
futures.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
sqlx.workspace = true
qdrant-client.workspace = true
hmac.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
jsonwebtoken.workspace = true
regex.workspace = true
rsa.workspace = true
rand_chacha.workspace = true
urlencoding.workspace = true
tokio-stream = "0.1"
base64 = "0.22"
anyhow = "1"
tempfile.workspace = true
async-trait = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Spins up a real HTTP server in-process so strategy tests can exercise the
# full FLARE state machine (streaming SSE, retrieval-triggered restarts,
# repeat detection, token caps) against a scripted Cerebras response.
wiremock = "0.6"
